<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FinalActivity"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/final_location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin_code"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/final_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cann_t_be_delivered_to_this_location"
        android:textColor="@color/snackbar"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:visibility="gone"
        android:layout_marginStart="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/final_otp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_input_otp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:visibility="gone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/final_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/confirm_order"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_order"
        android:textColor="@color/white"
        android:background="@drawable/user_submit_background"
        android:padding="5dp"
        android:textSize="20sp"
        android:fontFamily="@font/font"
        />


</LinearLayout>