<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="380dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:padding="20dp"
        app:cardCornerRadius="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:text="@string/log_in"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/font"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_input_mobile_layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_input_mobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginLeft="@dimen/user_cardView_margin"
                android:layout_marginRight="@dimen/user_cardView_margin"
                android:layout_marginTop="@dimen/user_cardView_margin"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_input_mobile_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@color/colorPrimary"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/hane_not_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/user_cardView_margin"
                android:layout_marginStart="@dimen/user_cardView_margin"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/have_not_account"/>
                <TextView
                    android:id="@+id/signup_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_marginLeft="4dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"/>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_otp_layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_input_otp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginLeft="@dimen/user_cardView_margin"
                android:layout_marginRight="@dimen/user_cardView_margin"
                android:layout_marginTop="@dimen/user_cardView_margin"
                android:visibility="gone"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_otp_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submit_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/user_cardView_margin"
                android:text="@string/user_next"
                android:textSize="@dimen/user_submit_button"
                android:textColor="@color/white"
                android:fontFamily="@font/font"
                android:background="@drawable/user_submit_background"
                />



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>