<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/stared"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StaredActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/layout_leftMargin"
        android:layout_marginStart="@dimen/layout_leftMargin">
        <ImageView
            android:id="@+id/wishlist_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/back"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wishlist"
            android:textColor="@color/white"
            android:textSize="@dimen/tittleSize"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/font"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/wishlist_user_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/recycle_marginTop"
        android:background="@drawable/recycle_background"
        android:padding="@dimen/recyclePadding"
        />
    <ImageView
        android:id="@+id/wishlist_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:contentDescription="@string/backgroundimage" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>