<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/userProfile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserProfile"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_layout_height"
        android:background="@color/colorPrimary"

        android:padding="@dimen/user_layout_padding"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/profile_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/back" />
        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:fontFamily="@font/font"
            android:textSize="@dimen/user_name"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/userMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/user_mobile"
            android:text="@string/_2638162631"
            android:layout_gravity="center"
            android:fontFamily="@font/font"
            android:layout_marginTop="@dimen/user_mobile_marginTop"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/user_image_layout_marginTop">

            <ImageView
                android:id="@+id/user_logout"
                android:layout_width="@dimen/user_image"
                android:layout_height="@dimen/user_image"
                android:scaleType="centerCrop"
                android:src="@drawable/logout"

                />


        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/order_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_order_history_marginTop1"
        android:layout_marginRight="@dimen/user_cardView_margin"
        android:layout_marginLeft="@dimen/user_cardView_margin"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/user_card_corner_radius"
        app:strokeWidth="@dimen/user_card_stroke_width"
        app:strokeColor="@color/colorPrimary"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/user_cardView_padding"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_history"
                android:textSize="@dimen/user_orderHistory_text"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/font"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/user_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_order_history_marginTop1"
        android:layout_marginRight="@dimen/user_cardView_margin"
        android:layout_marginLeft="@dimen/user_cardView_margin"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/user_card_corner_radius"
        app:strokeWidth="@dimen/user_card_stroke_width"
        app:strokeColor="@color/colorPrimary"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/user_cardView_padding"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_cart"
                android:textSize="@dimen/user_orderHistory_text"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/font"
                />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/order_whishlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_order_history_marginTop1"
        android:layout_marginRight="@dimen/user_cardView_margin"
        android:layout_marginLeft="@dimen/user_cardView_margin"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/user_card_corner_radius"
        app:strokeWidth="@dimen/user_card_stroke_width"
        app:strokeColor="@color/colorPrimary"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/user_cardView_padding"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whishlist"
                android:textSize="@dimen/user_orderHistory_text"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/font"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>




</LinearLayout>